# neighbourhood-library

./: .env.example  .env.observability  .gitignore  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  test.sh
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/scripts/: gen_proto.sh  reset_and_seed.py  sample_client.py
backend/tests/: conftest.py
backend/tests/integration/: test_books.py  test_borrow_return.py  test_concurrency.py  test_members.py  test_observability.py  test_resilience.py
backend/tests/unit/: conftest.py  test_backoff.py  test_book_service.py  test_classify.py  test_conversions.py  test_decorator.py  test_errors.py  test_loan_logic.py  test_loan_service.py  test_member_service.py
deploy/envoy/: envoy.yaml
deploy/signoz/: clickhouse-cluster.xml  clickhouse-users.xml  collector.yaml  post-migrate.sql  prometheus.yml
docs/: 00-overview.md  README.md  architecture.md  configuration.md  deploy.md  development.md  progress-report.md  setup.md  test.md  test_api.md
docs/archive/: SPEC-monolithic.md
docs/design/: 01-database.md  02-api-contract.md  03-backend.md  04-frontend.md  05-infrastructure.md  06-observability.md
docs/phases/: phase-1-scaffolding.md  phase-2-schema-migrations.md  phase-3-proto-codegen.md  phase-4-backend-crud.md  phase-5-5-observability.md  phase-7-polish.md  (+4 more)
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  buf.gen.yaml  package-lock.json  package.json  playwright.config.ts
(+53 files in other folders)
